--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar bg-base-100">
-  <div class="flex-1">
+  <div class="navbar-start">
     <label for="my-drawer" class="btn btn-ghost drawer-button">
       <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current md:h-6 md:w-6">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -7,7 +7,28 @@
     </label>
     <%= link_to "Plagiarism Control", root_path, class: "btn btn-ghost normal-case text-xl" %>
   </div>
-  <div class="flex-none gap-2">
+  <div class="navbar-center hidden lg:flex">
+    <ul class="menu menu-horizontal p-0">
+      <% @categories.each_with_index do |category, i|%>
+        <% if category.sub_categories.empty? %>
+          <li><a><%= category.name %></a></li>
+        <% else %>
+          <li tabindex="<%= i %>">
+            <a>
+              <%= category.name %>
+              <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/></svg>
+            </a>
+            <ul class="p-2">
+              <% category.sub_categories.each do |subcategory|%>
+                  <li><a><%= subcategory.name %></a></li>
+              <% end %>
+            </ul>
+          </li>
+        <% end %>
+      <% end %>
+    </ul>
+  </div>
+  <div class="navbar-end gap-2">
     <% if current_user %>
       <div class="dropdown dropdown-end">
         <label tabindex="0" class="btn btn-ghost btn-circle avatar">
