Create crude brand and product structure Create edit delete to be done later

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,10 +14,10 @@
           <li><a><%= category.name %></a></li>
         <% else %>
           <li tabindex="<%= i %>">
-            <a>
+            <%= link_to category_products_path(category) do %>
               <%= category.name %>
               <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"/></svg>
-            </a>
+            <% end %>
             <ul class="p-2">
               <% category.sub_categories.each do |subcategory|%>
                   <li><a><%= subcategory.name %></a></li>
