--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,25 @@
 <% content_for :title, @product.name %>
 <%= link_to 'Compare', product_compare_path(@product), class: 'btn btn-primary' %>
 
-<h2><%= @product.name %></h2>
-<p><%= @product.description %></p>
+<div class="card w-96 bg-base-100 shadow-xl py-3">
+  <figure>
+    <% if @product.images.attached? %>
+      <div class="w-64 carousel rounded-box">
+        <% @product.images.each_with_index do |image, index|%>
+          <div class="carousel-item w-full">
+            <%= image_tag image , class: 'object-scale-down h-36 w-50', class: 'w-full', alt: "product-image-#{index}" %>
+          </div> 
+        <% end %>
+      </div>
+    <% else %>
+        <img class="max-h-20" src="https://dummyimage.com/640x360/fff/aaa" alt="placeholder">
+    <% end %>
+  </figure>
+  <div class="card-body">
+    <h2 class="card-title"><h2><%= @product.name %></h2></h2>
+    <p><%= @product.description %></p>
+    <div class="card-actions justify-end">
+      <button class="btn btn-primary">Add to Cart</button>
+    </div>
+  </div>
+</div>
