--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,7 @@
             <div class="card-body items-center text-center">
                 <h2 class="card-title"><%= product.name %></h2>
                 <p><%= product.description %></p>
+                <p><%= number_to_currency(product.price, unit: '₺') %></p>
             </div>
         </div>
     <% end %>
