--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -8,6 +8,10 @@
         <%= f.text_area :description, class: 'input input-bordered w-full max-w-xs'%>
     </div>
     <div class="form-control w-full max-w-xs">
+        <%= f.label :price, class: 'label label-text' %><br />
+        <%= f.number_field :price, in: 1.0..9999999.0, step: 0.5,  class: 'input input-bordered w-full max-w-xs'%>
+    </div>
+    <div class="form-control w-full max-w-xs">
         <%= f.label :sub_category, class: 'label label-text' %><br />
         <%= f.select :sub_category_id, select_category_list(@categories), {}, class: 'select select-bordered' %>
     </div>
