--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,6 +18,7 @@
   <div class="card-body">
     <h2 class="card-title"><h2><%= @product.name %></h2></h2>
     <p><%= @product.description %></p>
+    <p><%= number_to_currency(@product.price, unit: '₺') %></p>
     <div class="card-actions justify-end">
       <button class="btn btn-primary">Add to Cart</button>
     </div>
