--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,6 @@
 <div class="navbar bg-base-100">
   <div class="navbar-start">
-    <label for="my-drawer" class="btn btn-ghost drawer-button">
-      <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="inline-block h-5 w-5 stroke-current md:h-6 md:w-6">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-      </svg>
-    </label>
-    <%= link_to "Plagiarism Control", root_path, class: "btn btn-ghost normal-case text-xl" %>
+    <%= link_to "Ecommerce", root_path, class: "btn btn-ghost normal-case text-xl" %>
   </div>
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal p-0">
@@ -28,20 +23,20 @@
       <% end %>
     </ul>
   </div>
-  <div class="navbar-end gap-2">
-    <div class="dropdown dropdown-end">
+  <div data-controller="cart" class="navbar-end gap-2">
+    <div data-action="click->cart#fetchCartData" class="dropdown dropdown-end">
       <label tabindex="0" class="btn btn-ghost btn-circle">
         <div class="indicator">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" /></svg>
-          <span class="badge badge-sm indicator-item">8</span>
+          <span id="dropdown-item-count-badge" class="badge badge-sm indicator-item"></span>
         </div>
       </label>
       <div tabindex="0" class="mt-3 card card-compact dropdown-content w-52 bg-base-100 shadow">
         <div class="card-body">
-          <span class="font-bold text-lg">8 Items</span>
-          <span class="text-info">Subtotal: $999</span>
+          <span id="dropdown-item-count" class="font-bold text-lg">0 Items</span>
+          <span id="dropdown-subtotal" class="text-info">Subtotal: $999</span>
           <div class="card-actions">
-            <button class="btn btn-primary btn-block">View cart</button>
+            <%= link_to 'View cart', cart_path, class: 'btn btn-primary btn-block' %>
           </div>
         </div>
       </div>
@@ -55,6 +50,7 @@
         </label>
         <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
           <li><%= link_to "Profile", edit_user_registration_path %></li>
+          <li><%= link_to "My Orders", my_orders_path %></li>
           <li><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: 'delete' } %></li>
         </ul>
       </div>
