--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <body>
     <div class="min-h-screen flex flex-col">
       <%= render 'layouts/header' %>
-      <div class="min-w-full relative mx-auto px-4 flex flex-grow">
+      <div class="relative mx-auto px-4 flex flex-grow">
         <div class="content">
           <%= render 'layouts/alerts' %>
           <%= yield %>
