--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,14 @@
 <% content_for :title, 'Ecommerce' %>
+
+<div class="my-5 flex justify-center">
+    <%= form_with url: "/search", method: :get do |f| %>
+        <div class="input-group">
+            <%= f.text_field :query, placeholder: 'Search', class: 'input input-bordered w-full max-w-xs'%>
+            <%= f.button class: 'btn btn-square' do %>
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+            <% end %>
+        </div>
+    <% end %>
+</div>
+
+
