--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,6 +24,16 @@
     </ul>
   </div>
   <div data-controller="cart" class="navbar-end gap-2">
+    <div class="flex justify-center">
+      <%= form_with url: "/search", method: :get do |f| %>
+          <div class="input-group">
+              <%= f.text_field :query, placeholder: 'Search', class: 'input input-bordered'%>
+              <%= f.button class: 'btn btn-square' do %>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
+              <% end %>
+          </div>
+      <% end %>
+    </div>
     <div data-action="click->cart#fetchCartData" class="dropdown dropdown-end">
       <label tabindex="0" class="btn btn-ghost btn-circle">
         <div class="indicator">
