--- a/app/views/orders/my_orders.html.erb
+++ b/app/views/orders/my_orders.html.erb
@@ -1,6 +1,3 @@
 <% content_for :title, 'My Orders' %>
 
-<% @orders.each do |order| %>
-  <h2><%= order.id %></h2>
-  <p><%= order.total %></p>
-<% end %>
+<%= render 'order_list' %>
