--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,11 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <% if content_for?(:meta_tags) && content_for?(:description) %>
+      <meta name="keywords" content="<%= yield(:meta_tags) %>">
+      <meta name="description" content="<%= yield(:description) %>">
+    <% end %>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
 
