--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,6 +61,20 @@
         </label>
         <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
           <li><%= link_to "Profile", edit_user_registration_path %></li>
+          <% if current_user.admin? %>
+            <li>
+              <div class="dropdown dropdown-left dropdown-hover">
+                Admin Menu
+                <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+                  <li><%= link_to "All Orders", orders_path %></li>
+                  <li><%= link_to "New Offers", new_offer_path %></li>
+                  <li><%= link_to "New Product", new_product_path %></li>
+                  <li><%= link_to "Bulk Actions", new_bulk_path %></li>
+                  <li><%= link_to "Tags", tags_path %></li>
+                </ul>
+              </div>
+            </li>
+          <% end %>
           <li><%= link_to "My Orders", my_orders_path %></li>
           <li><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: 'delete' } %></li>
         </ul>
